# PuniniMaker-GGJ2024

./: CMakeLists.txt  README.md
Assets/Aseprite sprites/: Sprite-0001.aseprite
Assets/Punini sprite/: Chopping_Board-Card_Pile.aseprite  Panini-maker.aseprite  Panini-maker_lid.aseprite  Sprite-0001.aseprite
src/: GameInstance.cpp  GameInstance.h  main.cpp
src/Addons/: ImageResizer.cpp  ImageResizer.h
src/Cards/: BaseCard.cpp  BaseCard.h
src/Components/: GameData.h  Helper.h  ResourceManager.hpp
src/GameStates/: GameEnd.cpp  GameEnd.h  GamePlay.cpp  GamePlay.h  GameStart.cpp  GameStart.h
src/GameStates/Test/: TestEnvironment.cpp  TestEnvironment.h
src/Interfaces/: StateTemplate.h
